--- a/BoatClubWebsite/BoatClubWebsite.csproj
+++ b/BoatClubWebsite/BoatClubWebsite.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\BoatClubProjekt\BoatClubLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Data\" />
+  </ItemGroup>
+
 </Project>
