--- a/BoatClubProjekt/BoatClubLibrary.csproj
+++ b/BoatClubProjekt/BoatClubLibrary.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AdminData\AdminService\" />
+    <Compile Remove="AdminData\AdminService\**" />
+    <EmbeddedResource Remove="AdminData\AdminService\**" />
+    <None Remove="AdminData\AdminService\**" />
   </ItemGroup>
 
 </Project>
